# BE-learning-assisstant

./: .env.example  .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  BACKEND_SUMMARY.md  DEVELOPMENT.md  Dockerfile  FRONTEND_GUIDE.md  PROJECT_SUMMARY.md  QA_CHAT_DOCUMENTATION.md  README.md  REVIEW_QUIZ_EXPLAINED.md  alembic.ini  docker-compose.yml  init_db.py  pyproject.toml  setup.ps1  setup.sh  test_setup.py
alembic/: env.py
alembic/versions/: 014e34890f22_fix_bug_relation_of_course.py  0c731ce70022_add_table_to_function_share_course.py  263491c08310_initial_migration_for_supabase.py  29694998b6a0_add_course_quizz_studiesnote_flashcard_.py  305c8bfff6ea_update_relation_of_user_table.py  3426019b73ff_change_status_to_process_status_of_.py  3a93b84e9e5d_add_datatable_for_review_quiz.py  3dd25ab8d65d_remove_description_index_of_course.py  3f71d7c44383_add_index_to_course.py  431b1b760333_add_table_document_chunk.py  4534efcdfdfa_add_table_for_qa_chat_api.py  51412845a3d2_add_datatable_for_review_quiz.py  598d2029a739_remove_document_id_from_conversation_.py  5a65c569985e_fix_bug_relation_of_course.py  6298d02803fa_add_session_id_to_quiz.py  6fc57bad355c_add_question_type_column_to_courses_.py  87e84685f67f_add_course_quizz_studiesnote_flashcard_.py  8bb80e1591d5_remove_avatar_url_from_user_personality_.py  8c8e83e81275_add_hint_and_memories_tip_to_flashcard_.py  8d7985693e3d_add_folder_table.py  908760a1163f_add_table_to_learning_tracking.py  92ccb40e1461_add_oauth_login_to_user_table.py  b0d89d672b0f_add_resetpasswordtoken_table.py  b1db3c37c541_add_user_personality_table.py  c41911506ae1_add_relation_auto_delete_document_.py  c9083f3c4561_change_status_to_process_status_of_.py  c97c9d4ed914_add_user_id_to_folder.py  ceb91b4ec7f3_add_user_personality_table.py  d517e667ea62_add_table_to_function_share_course.py  de00b47cf7ca_fix_bug_date.py  dff56206892f_modify_table_document_chunk_dim_1536_.py  e0a46ad3b742_modify_user_personality_table.py  e46eb08b4a63_fix_bug_relation_of_course.py  e9ef75ce8bb1_modify_table_document_chunk_add_.py
app/: main.py
app/core/: config.py  dependencies.py  document_processor.py  llm_config.py  permissions.py  security.py
app/db/: base.py  init_db.py
app/models/: __init__.py  conversation.py  course.py  document.py  document_chunk.py  folder.py  learning.py  mcq.py  quiz_attempt.py  review_analysis.py  test.py  user.py  user_personality.py
app/schemas/: __init__.py  auth.py  common.py  course.py  document.py  flashcard.py  folder.py  learning.py  mcq.py  test.py  user.py
app/services/: ai_service.py  file_service.py  mail_service.py  oauth_service.py
app/templates/: verify_email.html
app/utils/: document_parser.py  file_upload.py
versions/: 23b22aab164a_test_db_migration_from_render_back_to_.py  a82e40f08b8b_test_db_migration_from_render.py  a9641dd33afa_modify_eeee.py  c53ce6e91060_modify_eeee.py
(+38 files in other folders)
