[tool.poetry]
name = "datn"
version = "0.1.0"
description = "Intelligent Learning Assistant with Interaction and Knowledge Testing"
authors = ["NamPV-Picon <nam03412003@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"
pypdf2 = "^3.0.1"
python-docx = "^1.1.0"
python-pptx = "^0.6.23"
aiofiles = "^23.2.1"
bcrypt = "4.0.1"
pytz = "^2025.2"
fastapi-mail = "^1.5.8"
google-cloud-storage = "^3.6.0"
pytest = "^9.0.1"
pypdf = "^6.4.1"
langchain-text-splitters = "^1.0.0"
voyageai = {markers = "python_version < \"3.14\"", version = "^0.3.5"}
pgvector = "^0.4.2"
hdbscan = "^0.8.40"
umap-learn = "^0.5.9.post2"
filetype = "^1.2.0"
langchain-openai = "^1.1.1"
langgraph = "^1.0.4"
openai = "^2.9.0"
websockets = "^15.0.1"
httpx = "^0.28.1"
langchain-google-genai = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.3"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
